cros: Do not animate launcher if dragging app from top.

This may happen if all windows other than the app in question are
minimized because overview tells app list to slide in/out if all windows
are minimized (the dragged app is excluded from overview).

Test: manual
Bug: 888149
Change-Id: Ib883b138939991195c1dc939a1a5b513384a8cfb
Reviewed-on: https://chromium-review.googlesource.com/c/1241562
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600108}
Former-commit-id: 262d214d2cdfb75376f8aa9cee6dc9a9e54abb46